# flash-preprocess

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  config.yaml.example  event_extraction_pipeline.py  event_pipeline.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: lint.yaml  pytest.yaml
data/: README.md  events_upper_neuse.csv
engine/: README.md
engine/forcing/: _strip_compression.py  merge_15min.py  strip_compression.py
engine/forcing/aorc/: _debug.ipynb  aorc_extract_hourly.py  extract.py  gage_to_catchment.py  index_hf.py  index_hf_weighted.py  run_pipeline.py  to_events.py
engine/forcing/aorc/old_reference/: extract.py  index_hf_weighted.py  to_events.py
engine/forcing/mrms/: MRMS_Within_Selected_Catchments_in_Hydrofaric (4).ipynb  _01_hydrofabric_setup (3).ipynb  _03_event_manifest_download_crosswalk (4).ipynb  _04_area_weight_15min_export (3).ipynb  _0_README_v1 (1).md  _0_README_v2 (1).md  aggregate_events.py  check_single_event.py  extract.py  merge.py  patch_mrms_15min.py  run_pipeline.py  run_sharded.sh  sharding.md  sharding.py  split_events_shards.py
engine/forcing/mrms/old_reference/: _01_hydrofabric_setup (6).ipynb  _02_crosswalk_and_event_selection_260715.ipynb  _03_event_manifest_download_crosswalk_260715.ipynb  _04_area_weight_15min_export (7).ipynb  aggregate_events.py  batch_redownload_flagged_events.py  download_mrms_multi_huc8 (1).py  rebuild_flagged_events_precip.py
engine/forcing/mrms/old_reference/pre_consolidation/: crosswalk.py  extract.py  fractional_crosswalk.py  hydrofabric.py  manifest.py  mrms_bbox_downloader.py
engine/geo/: README.md  _gage_to_cat.py  extract_hf.py  extract_hydrofabric.py  gage_to_cat.py
engine/streamflow/usgs/: _to_events.py  discharge.ipynb  extract.py  run_pipeline.py  to_events.py
event_extraction/: README.md  usgs_events.py
event_preprocess_inputs/: gages2_lt1000km2.csv
forcing/aorc/: aorc_extract_hourly.py  index_hf22.py  index_hf22_weighted.py
forcing/mrms/: MRMS_Within_Selected_Catchments_in_Hydrofaric (4).ipynb
geo/: README.md
plot/: README.md  train_test_split.py
src/flash_preprocess/: __init__.py  __main__.py  _version.py  aorc.py  mrms.py  paths.py  pet.py  utils.py
streamflow/usgs/: README.md
